Blender Crashes when "OpenGL render active viewport" is pressed in VSE #44465

Closed
opened 2015-04-21 14:19:37 +02:00 by Daniel Martinez Lara · 5 comments

Blender Version
version 2.74 (sub 4), branch b'master', commit date b'2015-04-20' b'18:50', hash b'62e1498', b'Release'
build date: b'2015-04-21', b'04:06:51'
platform: b'Linux:64bit'

Short description of error
Blender Crashes when "OpenGL render active viewport" is pressed in VSE

Exact steps for others to reproduce the error
1- open "Bug" blend file
2- press "OpenGL render active viewport" in VSE

Result: Blender Crashes!

bug.blend
Bye :)

**Blender Version** version 2.74 (sub 4), branch b'master', commit date b'2015-04-20' b'18:50', hash b'62e1498', b'Release' build date: b'2015-04-21', b'04:06:51' platform: b'Linux:64bit' **Short description of error** Blender Crashes when "OpenGL render active viewport" is pressed in VSE **Exact steps for others to reproduce the error** 1- open "Bug" blend file 2- press "OpenGL render active viewport" in VSE Result: Blender Crashes! [bug.blend](https://archive.blender.org/developer/F164987/bug.blend) Bye :)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @pepe-school-land

Added subscriber: @pepe-school-land

This issue was referenced by de687b6fa0

This issue was referenced by de687b6fa02138146294c0a9a810c5234f1ac0dc
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit de687b6fa0.

Closed by commit de687b6fa0.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44465
No description provided.