Fix T44465: Crash using VSE OGL render + Grease Pencil

Likely caused by rBd5f1b9c22233